--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
                         <span>Bienvenue !</span>
                         <h1>Centre hospitalier <br>du Belvédère <span class="has-purple-text">_</span></h1>
                         <a href="#" class="button" aria-label="En savoir plus sur le Belvédère">En savoir plus</a>
-
                         <div class="hero__scroll">
                             <img src="img/icon_scroll.svg" alt="icone pour scroller" class="margin-right">
                             <p>Scroll pour continuer à explorer</p>
+                            <div id= cercle_layout></div>
                         </div>
                     </div>
                    
